add my dream car4

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="/yingying-airbnb/logo192.png" />
     <h1>My dream car</h1>
+    <link rel="apple-touch-icon" href="/yingying-airbnb/car.png" />
     <img src="/car.png"></img>
     <link rel="manifest" href="/yingying-airbnb/manifest.json" />
     <title>React App</title>
