--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- <link rel="apple-touch-icon" href="/yingying-airbnb/logo192.png" /> -->
     <h1>My dream car</h1>
     <!-- <link rel="apple-touch-icon" href="/yingying-airbnb/car.png" /> -->
-    <img src="/car.png"></img>
+    <img src="src/images/car.png"></img>
     <!-- <link rel="manifest" href="/yingying-airbnb/manifest.json" /> -->
     <title>React App Yingying</title>
     <!-- <script defer="defer" src="/yingying-airbnb/static/js/main.00269fd2.js"></script> -->
@@ -22,7 +22,7 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script crossorigin src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <link rel="Stylesheet" href="./src/style.css">
+    <link rel="Stylesheet" href="/src/style.css">
 </head>
 
 <body>
